[package]
name = "pixels"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["MrRevillod"]
description = "A simple image to webp optimization CLI"
homepage = "https://revillod.dev/proyectos/pixels"
repository = "https://github.com/MrRevillod/Pixels"
keywords = ["cli", "image", "webp"]
categories = ["command-line-utilities"]
readme="README.md"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
image = "0.24.9"
webp = "0.2.6"
